tests/snapshots/run_wpt_conformance__coreml_averagePool2d_float16_4D_tensor_options_layout_nhwc_and_options_outputShapeRounding_floor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
averagePool2d.https.any.js averagePool2d float16 4D tensor options.layout=nhwc and options.outputShapeRounding=floor, coreml
 Failed to build graph: graph conversion failed for coreml_mlprogram: CoreML pooling currently supports only NCHW layout; got 'nhwc' for averagePool2d

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    averagePool2dInput: f16[1, 5, 5, 2];
  }

  nodes {
    [averagePool2dOutput] = averagePool2d(averagePool2dInput, dilations=[], label="", layout="nhwc", outputShapeRounding="floor", outputSizes=null, padding=[1, 0, 0, 1], strides=[2, 2], windowDimensions=[3, 3]);
  }

  outputs { averagePool2dOutput; }
}
